--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,15 +13,18 @@
     "@apollo/client": "^3.10.4",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/base": "5.0.0-beta.40",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "avvvatars-react": "^0.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.11",
