--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,12 +16,14 @@
     "@mui/base": "5.0.0-beta.40",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "avvvatars-react": "^0.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.379.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
